Rendering loop and multi-app testing verified
We're now rendering OpenGL code, and I created a very simple test app to check
this.  The scaffold app hasn't changed due to this.

--- a/olga/CMakeLists.txt
+++ b/olga/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(libOlga/)
 add_library(Olga SHARED
   ${VENDORS_SOURCES}
   libOlga/App.cc
+  libOlga/Color.cc
   libOlga/EventDispatcher.cc)
 
 # Define headers for this library. PUBLIC headers are used for
